[package]
name = "shumai"
version = "0.2.14"
edition = "2021"
description = "A benchmark framework that empowers efficient and correct multi-thread benchmarks."
keywords = ["benchmark", "multi-thread"]
repository = "https://github.com/XiangpengHao/shumai"
readme = "README.md"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30", default-features = false }
ureq = { version = "2.9.1", default-features = false, features = [
	"json",
], optional = true }
shumai-config-impl = { path = "impl", version = "0.2" }
pprof = { version = "0.13", features = ["flamegraph"], optional = true }
colored = "2.1.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
regex = { version = "1.10.2", default-features = false, features = ["std"] }
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
perf-event = { version = "0.4.8", optional = true }

[dev-dependencies]
crossbeam = "0.8.3"

[features]
pcm = ["ureq"]
perf = ["perf-event"]
flamegraph = ["pprof"]

[workspace]
members = ["impl"]
