[package]
name = "shumai-config-impl"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/XiangpengHao/shumai"
keywords = ["benchmark", "multi-thread"]
description = "A benchmark framework that empowers efficient and correct multi-thread benchmarks."
readme = "../README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"]}
